# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
page_analyzer/: app.py  models.py  seo_analyzer.py
page_analyzer/config/: database.py
page_analyzer/models/: __init__.py  base.py  url.py  url_check.py
page_analyzer/routes/: urls.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
tests/: README.md  conftest.py  test_database.sql  test_models.py  test_routes.py  test_seo_analyzer.py
